--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,16 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <title>Revolutionary War Battles</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div id="menu">
+      <span class="title">Battles of the American Revolution</span>
+      <button class="about">ABOUT</button>
+    </div>
     <div id="map"></div>
+    <script src="https://unpkg.com/tippy.js@3/dist/tippy.all.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAm7AdcZ0nCVstvp1USs0GwIEBCdkMSq80&callback=initMap"></script>
   </body>
 </html>
