--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,6 @@
     <div id="map"></div>
     <script src="https://unpkg.com/tippy.js@3/dist/tippy.all.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAm7AdcZ0nCVstvp1USs0GwIEBCdkMSq80&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"></script>
   </body>
 </html>
